kubernetes/mongo-express.yaml
# k8s/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: me-deploy
  namespace: mern
  labels: { app: mongo-express }
spec:
  replicas: 1
  selector: { matchLabels: { app: mongo-express } }
  template:
    metadata: { labels: { app: mongo-express } }
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:1.0.0
          ports: [{ containerPort: 8081 }]
---
apiVersion: v1
kind: Service
metadata:
  name: me-svc
  namespace: mern
spec:
  selector: { app: mongo-express }
  ports:
    - name: http
      port: 8081
      targetPort: 8081
