kubernetes/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
  namespace: mern
  labels: { app: mongo }
spec:
  replicas: 1
  selector: { matchLabels: { app: mongo } }
  template:
    metadata: { labels: { app: mongo } }
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports: [{ containerPort: 27017 }]
          volumeMounts:
            - name: data
              mountPath: /data/db
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: mern
spec:
  selector: { app: mongo }
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
